--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kian Siew Looi | Contact</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container fade-in">
+    <img src="https://via.placeholder.com/120" alt="Profile Photo" class="profile">
+    <h1>Kian Siew Looi</h1>
+    <p class="tagline">Strategy & Economics | Principal, Nucleotide Enterprises</p>
 
+    <div class="links">
+      <a href="mailto:kian@email.com">📧 Email</a>
+      <a href="tel:+6598765432">📱 +65 9876 5432</a>
+      <a href="https://linkedin.com/in/kslooi" target="_blank">🔗 LinkedIn</a>
+      <a href="https://example.com/resume.pdf" class="button" target="_blank">📄 Download Resume</a>
+    </div>
+  </div>
+</body>
+</html>
