--- a/index.html
+++ b/index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kian Siew Looi | Contact</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Kian Siew Looi | Contact Details</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
-  <div class="container fade-in">
-    <img src="https://via.placeholder.com/120" alt="Profile Photo" class="profile">
-    <h1>Kian Siew Looi</h1>
-    <p class="tagline">Strategy & Economics | Principal, Nucleotide Enterprises</p>
+  <div class="container">
+    <div class="profile-image">
+      <img src="profilepic.jpg"/>
+    </div>
+    <div class="info">
+      <h1 class="poppins">Kian Siew Looi</h1>
+      <p class="subtitle poppins">CFA, MCom, MBA (2026)</p>
+      <p class="position poppins">Principal @ Nucleotide</p>
 
-    <div class="links">
-      <a href="mailto:kian@email.com">📧 Email</a>
-      <a href="tel:+6598765432">📱 +65 9876 5432</a>
-      <a href="https://linkedin.com/in/kslooi" target="_blank">🔗 LinkedIn</a>
-      <a href="https://example.com/resume.pdf" class="button" target="_blank">📄 Download Resume</a>
+      <hr class="divider" />
+      <div class="contact-section">
+        <div class="contact-item">
+          <span class="icon-wrapper"><i class="fas fa-phone-alt"></i></span> +65 91489432
+        </div>
+        <div class="contact-item">
+          <span class="icon-wrapper"><i class="fas fa-envelope"></i></span>
+          <a href="mailto:kian.siew@nucleotide.pro">kian.siew@nucleotide.pro</a>
+        </div>
+        <div class="contact-item">
+          <span class="icon-wrapper"><i class="fab fa-linkedin-in"></i></span>
+          <a href="https://linkedin.com/in/kiansiewlooi" target="_blank">linkedin.com/in/kiansiewlooi</a>
+        </div>
+        <div class="contact-item">
+          <span class="icon-wrapper"><i class="fas fa-globe"></i></span>
+          <a href="https://www.nucleotide.pro" target="_blank">nucleotide.pro</a>
+        </div>
+        <div class="contact-item">
+          <span class="icon-wrapper"><i class="fas fa-map-marker-alt"></i></span> Singapore, Malaysia, New Zealand
+        </div>
+      </div>
     </div>
   </div>
 </body>
