--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="https://www.nucleotide.pro" target="_blank">nucleotide.pro</a>
         </div>
         <div class="contact-item">
-          <span class="icon-wrapper"><i class="fas fa-map-marker-alt"></i></span> Singapore, Malaysia, New Zealand
+          <span class="icon-wrapper"><i class="fas fa-map-marker-alt"></i></span> SG, MY, NZ
         </div>
       </div>
     </div>
