--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <hr class="divider" />
       <div class="contact-section">
         <div class="contact-item">
-          <span class="icon-wrapper"><i class="fas fa-phone-alt"></i></span> +65 91489432
+          <span class="icon-wrapper"><i class="fas fa-phone-alt"></i></span> +65 9148 9432
         </div>
         <div class="contact-item">
           <span class="icon-wrapper"><i class="fas fa-envelope"></i></span>
