--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <title>Kian Siew Looi | Contact Details</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css?v=2"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
   <div class="container">
     <div class="profile-image">
-      <img src="profilepic.jpg"/>
+      <img src="profilepic.jpg" alt="Kian Siew Looi Profile Picture"/>
     </div>
     <div class="info">
       <h1 class="poppins">Kian Siew Looi</h1>
@@ -38,6 +38,12 @@
         <div class="contact-item">
           <span class="icon-wrapper"><i class="fas fa-map-marker-alt"></i></span> SG, MY, NZ
         </div>
+      </div>
+
+      <div class="download-button">
+        <a href="contact.vcf" download>
+          <i class="fas fa-download"></i> Download Contact
+        </a>
       </div>
     </div>
   </div>
