--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
           <span class="icon-wrapper"><i class="fas fa-map-marker-alt"></i></span> SG, MY, NZ
         </div>
       </div>
-
       <div class="download-button">
         <a href="contact.vcf" download>
-          <i class="fas fa-download"></i> Download Contact
+            <span class="icon-wrapper"><i class="fas fa-download"></i></span>
+            Download Contact
         </a>
       </div>
     </div>
