--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -41,8 +41,8 @@
       </div>
       <div class="download-button">
         <a href="contact.vcf" download>
-            <span class="icon-wrapper"><i class="fas fa-download"></i></span>
-            Download Contact
+          <i class="fas fa-download"></i>
+          Download Contact
         </a>
       </div>
     </div>
