--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
-<script>
-  function setViewportHeight() {
-    const vh = window.innerHeight * 0.01;
-    document.documentElement.style.setProperty('--vh', `${vh}px`);
-  }
-
-  setViewportHeight();
-  window.addEventListener('resize', setViewportHeight);
-</script>
-  
+  <div id="background"></div>
   <div class="container">
     <div class="profile-image">
       <img src="profilepic.jpg" alt="Kian Siew Looi Profile Picture"/>
