--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="info">
       <h1 class="poppins">Kian Siew Looi</h1>
       <p class="subtitle poppins">CFA, MCom, MBA (2026)</p>
-      <p class="position poppins">Principal - Nucleotide</p>
+      <p class="position poppins">Principal | Nucleotide</p>
 
       <hr class="divider" />
       <div class="contact-section">
