--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         </div>
       </div>
       <div class="download-button">
-        <a href="contact.vcf" download>
-          <i class="fas fa-download"></i>
-          Download Contact
-        </a>
+        <div class="border-frame">
+          <a href="contact.vcf" download>
+            <i class="fas fa-download"></i>
+            Download Contact
+          </a>
+        </div>
       </div>
     </div>
   </div>
