--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       <div class="download-button">
         <div class="gradient-frame">
           <a href="contact.vcf" download>
+            <span class="icon-box">
             <i class="fas fa-download"></i>
+            </span>
             Download Contact
           </a>
         </div>
