--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <hr class="divider" />
       <div class="contact-section">
         <div class="contact-item">
-          <span class="icon-wrapper"><i class="fas fa-phone-alt"></i></span> +65 9148 9432
+          <span class="icon-wrapper"><i class="fas fa-phone-alt"></i></span>+65 9148 9432
         </div>
         <div class="contact-item">
           <span class="icon-wrapper"><i class="fas fa-envelope"></i></span>
@@ -33,10 +33,10 @@
         </div>
         <div class="contact-item">
           <span class="icon-wrapper"><i class="fas fa-globe"></i></span>
-          <a href="https://www.nucleotide.pro" target="_blank">https://www.nucleotide.pro</a>
+          <a href="https://www.nucleotide.pro" target="_blank">https://nucleotide.pro</a>
         </div>
         <div class="contact-item">
-          <span class="icon-wrapper"><i class="fas fa-map-marker-alt"></i></span>Singapore, Malaysia, New Zealand
+          <span class="icon-wrapper"><i class="fas fa-map-marker-alt"></i></span>SG, MY, NZ
         </div>
       </div>
       <div class="download-button">
