--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="contact-item">
           <span class="icon-wrapper"><i class="fas fa-globe"></i></span>
-          <a href="https://www.nucleotide.pro" target="_blank">https://nucleotide.pro</a>
+          <a href="https://www.nucleotide.pro" target="_blank">https://www.nucleotide.pro</a>
         </div>
         <div class="contact-item">
           <span class="icon-wrapper"><i class="fas fa-map-marker-alt"></i></span>SG, MY, NZ
